# pirks

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.continue/rules/: CONTINUE.md  windows-build-rules.md
.continue/rules/audio/: RULES.md
.continue/rules/common/: RULES.md
.continue/rules/networking/: RULES.md
.continue/rules/server/: RULES.md
.continue/rules/testing/: RULES.md
cmake/: build_type.cmake  cli11_setup.cmake  debug_definitions.cmake  default_compiler_flags.cmake  deferral_setup.cmake  fetch_googletest.cmake  macos.cmake  platform_definitions.cmake  spdlog_setup.cmake  tests_options.cmake
docs/: COMMIT-TAGS.md  HOWTO-BUILD.md  PLANTUML-SETUP.md  SETUP-DEV-ENV.md  THIRD-PARTY.md
docs/macos/: AUDIO-SETUP.md
scripts/: clang-format-all.sh  cppcheck-all.sh  suppressions.txt
src/: main.cpp  version.h.in
src/audio/capture_audio/: AudioInputFactory.h  CMakeLists.txt  CaptureResult.h  IAudioInput.h  IAudioInputFactory.h
src/audio/capture_audio/linux/: LinuxAudioInputFactory.cpp  LinuxAudioInputFactory.h
src/audio/capture_audio/macos/: CaptureDevice.h  CaptureDevice.m  MacAudioInput.h  MacAudioInput.mm  MacAudioInputFactory.h  MacAudioInputFactory.mm
src/audio/capture_audio/windows/: AudioClientPtr.h  AudioFormats.h  AudioNotificationImpl.h  AudioUUIDs.h  DeviceEnumeratorPtr.h  WasapiAudioInput.cpp  WasapiAudioInput.h  WinAudioInputFactory.cpp  WinAudioInputFactory.h
src/capture/: CMakeLists.txt
src/capture/capture_audio/: AudioInputFactory.h  CMakeLists.txt  CaptureResult.h  IAudioInput.h  IAudioInputFactory.h  IMicrophone.h  IMicrophoneFactory.h  MicrophoneFactory.h  str_utils2.cpp  str_utils2.h
src/capture/capture_audio/macos/: AVAudio.h  AVAudio.m  CaptureDevice.h  CaptureDevice.m  MacAudioInput.h  MacAudioInput.mm  MacAudioInputFactory.h  MacAudioInputFactory.mm  MacMicrophone.h  MacMicrophone.mm  MacMicrophoneFactory.h  MacMicrophoneFactory.mm  TPCircularBufferHelper.h
src/capture/capture_audio/windows/: WinAudioInputFactory.cpp  WinAudioInputFactory.h  WinMicrophoneFactory.cpp  WinMicrophoneFactory.h  WindowsMicrophoneFactory.cpp  WindowsMicrophoneFactory.h
src/capture_audio/: IMicrophone.h
src/common/: CMakeLists.txt  CircularBuffer.h  CircularBufferToStr.h  ExitCode.h  deferral.h  str_utils.cpp  str_utils.h
src/common/config/: Config.cpp  Config.h
src/common/debug/: CircularBufferToStr.h  README.txt  memory_utils.cpp  memory_utils.h
src/common/windows/: ComInitializer.h  ComInterface.h  Interface.h  WinHandle.h
src/networking/: CMakeLists.txt  IConnection.h  PacketInfo.h
src/networking/tcp_net/: CMakeLists.txt  TCPConnection.cpp  TCPConnection.h
src/networking/udp_net/: CMakeLists.txt  UDPConnection.cpp  UDPConnection.h
src/server/: CMakeLists.txt  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  main.cpp  server_config.cpp
test/: CMakeLists.txt
test/common-debug-test/: CMakeLists.txt  memory_utils_test.cpp
test/common-test/: CMakeLists.txt  CircularBufferTest.cpp
test/debug/: memory_utils_test.cpp
test/microphone-test/: CMakeLists.txt  MicrophoneTest.cpp
test/microphone-test/res/macos/: info.plist
tests/: CMakeLists.txt
tests/common-tests/: CircularBufferTest.cpp
